--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">中文名</th>
+                        <th scope="col">日文名</th>
+                        <th scope="col">數量</th>
+                      </tr>
+                    </thead>
+                    <tbody class="table-body">
+                    </tbody>
+                  </table>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-primary">請將此畫面給工作人員看</button>
