--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       
       <div class="products col-8">
-        <div class="product-box">
+        <!-- <div class="product-box">
           <h5>雞腿</h5>
           <div class="group">
             <div class="item">
@@ -106,7 +106,7 @@
               <option value="">1</option>
             </select>
           </div>
-        </div>
+        </div> -->
         
       </div>
     </div>
