--- a/contant.html
+++ b/contant.html
@@ -20,13 +20,13 @@
 <body>
   <div class="img">
     <p>Englist-meun</p>
-    <img src="IMG_7342.png" alt="" width="200" height="200">
+    <img src="en.jpeg" alt="" width="200" height="200">
     <br>
     <a href="./takeshi-en/index.html">Link</a>
   </div>
   <div class="img">
     <p>中文菜單</p>
-    <img src="IMG_7342.png" alt="" width="200" height="200">
+    <img src="cn.jpeg" alt="" width="200" height="200">
     <br>
     <a href="./takeshi-cn/index.html">連結</a>
   </div>
