--- a/takeshi-en/index.html
+++ b/takeshi-en/index.html
@@ -103,7 +103,7 @@
             </select>
           </div>
         </div> -->
-        <div class="product-box">
+        <!-- <div class="product-box">
           <div class="item">
             <button type="button" class="img-btn" data-bs-toggle="modal" data-bs-target="#img24">
               <img src="./image/img_24.jpeg" alt="">
@@ -151,7 +151,7 @@
               <option value="">1</option>
             </select>
           </div>
-        </div>
+        </div> -->
         
       </div>
     </div>
