--- a/contant.html
+++ b/contant.html
@@ -26,7 +26,7 @@
   </div>
   <div class="img">
     <p>中文菜單</p>
-    <img src="cn.jpeg" alt="" width="200" height="200">
+    <img src="cn.PNG" alt="" width="200" height="200">
     <br>
     <a href="./takeshi-cn/index.html">連結</a>
   </div>
